--- a/resource-server/src/main/resources/application.properties
+++ b/resource-server/src/main/resources/application.properties
@@ -5,3 +5,4 @@ server.port=8081
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/creso
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/realms/creso/protocol/openid-connect/certs
 
+eureka.client.serviceUrl.defaultZone = http://localhost:8010/eureka
