make api-gateway discoverable

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=api-gateway
 server.port:80
 
+eureka.client.serviceUrl.defaultZone = http://localhost:8010/eureka
+
 # Resorce Server Routes
 spring.cloud.gateway.routes[0].id=user-status-check
 spring.cloud.gateway.routes[0].uri=http://localhost:8081
